Changed anchor names

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -20,13 +20,13 @@
   color: #1c8fd2;
 }
 
-#services .heading h3 {
+#schedule .heading h3 {
   color: #3a3a3a;
   text-shadow: none;
   background-color: white;
   padding: 0 10px;
 }
-#services .sub-heading p {
+#schedule .sub-heading p {
   color: #3a3a3a;
   text-shadow: none;
   background-color: white;
