--- a/public/css/style.css
+++ b/public/css/style.css
@@ -721,8 +721,8 @@ ul.the-icons {
 
 /* carousel slider */
 
-/* ================= services ============================ */
-section#services {
+/* ================= schedule ============================ */
+section#schedule {
 	background: url(../img/bg/bg-2.jpg) 50% 0 no-repeat fixed;
 	width:100%;
 	height:auto;
@@ -741,7 +741,7 @@ section#services {
 	margin-bottom:0;
 }
 
-/*========== works ==================*/
+/*========== call-for-papers ==================*/
 
 ul.filter {
 	list-style:none;
