Added name of speaker to detail page

--- a/talks/view.html.mustache
+++ b/talks/view.html.mustache
@@ -59,6 +59,7 @@
       <div class="heading">
         <h3><span>{{ title }}</span></h3>
         <h4>Tag {{day}}, {{slot}} – <em>{{ language }}</em></h4>
+        <h5>{{speaker}}</h5>
       </div>
       <div class="sub-heading">
         <p>
