added links to videos from 2013 and changed wording a little bit

--- a/talks/view.html.mustache
+++ b/talks/view.html.mustache
@@ -65,6 +65,14 @@
         <p>
           {{ abstract }}
         </p>
+        <p>
+          {{# video }}
+            <a href="{{ video }}">Zum Video</a>
+          {{/ video }}
+          {{^ video }}
+            Leider kein Video verfügbar.
+          {{/ video }}
+        </p>
       </div>
     </div>
   </div>
