Adjust year/dates and wording

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,8 +4,8 @@
   <div class="icon">
     <img src="img/ruby_froscon_logo-big.png" width="477">
   </div>
-  <h1><span class="ruby">Red</span><span class="froscon">Frog</span> Conf 2013</h1>
-  <h2>Ruby meets FrOSCon - Ruby Subkonferenz auf der FrOSCon 8</h2>
+  <h1><span class="ruby">Red</span><span class="froscon">Frog</span> Conf 2014</h1>
+  <h2>Ruby meets FrOSCon - auch auf der FrOSCon 9</h2>
 </div>
 </section>
 <!-- end intro -->
@@ -20,12 +20,18 @@
       </div>
       <div class="sub-heading">
         <p>
-          Die RedFrog ist die Ruby Subkonferenz der Froscon. Thematisch umfasst unsere Konferenz Ruby im weitesten Sinne:
-          Ob Rails oder Ruby Motion, ob JRuby oder Rubinius, Entwicklung oder Operations, Design Patterns oder Entwicklerkultur –
-          wir machen keine weiteren Vorgaben. Die Vorträge werden bevorzugt auf Deutsch gehalten, aber wir sind auch offen für
-          Vorträge auf Englisch. Da wir eine Subkonferenz sind, brauchst du nur
-          <a href="http://www.froscon.de/en/visitors/visitors">Eintritt bei der Froscon zu zahlen</a>
-          – wir verlangen keinen zusätzlichen Eintritt. Und natürlich kannst du auch an allen Talks der FrOSCon teilnehmen.
+        Die RedFrog ist eine Veranstaltung für Ruby-Interessierte auf der FrOSCon.
+        Wir verstehen uns als Konferenz, auch wenn wir dieses Jahr nicht offiziell als Subkonferenz der FrOSCon geführt werden.
+        Für euch als Besucher hat das keine fast keine Auswirkungen. Es wird weiterhin Vorträge geben - und dieses Jahr außerdem noch
+        einen Workshop.
+        </p>
+        <p>
+        Thematisch umfasst unsere Konferenz Ruby im weitesten Sinne:
+        Ob Rails oder Ruby Motion, ob JRuby oder Rubinius, Entwicklung oder Operations, Design Patterns oder Entwicklerkultur –
+        wir machen keine weiteren Vorgaben. Die Vorträge werden bevorzugt auf Deutsch gehalten, aber wir sind auch offen für
+        Vorträge auf Englisch. Da wir einen Workshop-Raum auf der FrOSCon zur Verfügung haben, brauchst du nur
+        <a href="http://www.froscon.de/en/visitors/visitors">Eintritt bei der Froscon zu zahlen</a>
+        – wir verlangen keinen zusätzlichen Eintritt. Und natürlich kannst du auch an allen Angeboten und Vorträgen der FrOSCon teilnehmen.
         </p>
       </div>
     </div>
@@ -311,7 +317,7 @@
       </div>
       <div class="sub-heading">
         <p>
-          Die RedFrog Conf 2013 fand im Rahmen der FrOSCon 8 am <strong>24. und 25. August 2013</strong> an der <strong>Hochschule Bonn-Rhein-Sieg in Sankt Augustin</strong>
+          Die RedFrog Conf 2014 findet im Rahmen der FrOSCon 9 am <strong>23. und 24. August 2014</strong> an der <strong>Hochschule Bonn-Rhein-Sieg in Sankt Augustin</strong>
           statt. Für nähere Infos möchten wir euch gerne auf die <a href="http://www.froscon.de/besucher/besucher/">offizielle FrOSCon Seite</a> verweisen.
         </p>
       </div>
