--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<title>RedFrog Conf 2013</title>
+<title>RedFrog Conf 2014</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="description" content="" />
 <meta name="author" content="" />
@@ -39,7 +39,7 @@
     <div class="container">
       <div class="title">
         <a href="http://ruby.froscon.org">
-          RedFrog Conf 2013
+          RedFrog Conf 2014
         </a>
       </div>
       <div class="navigation">
@@ -74,7 +74,7 @@
             </a>
           </div>
           <p>
-            &copy; Ruby FrOSCon Team 2013 - <a href="http://creativecommons.org/licenses/by-sa/3.0/de/deed.en_US">CC-BY-SA</a>
+            &copy; Ruby FrOSCon Team 2013-2014 - <a href="http://creativecommons.org/licenses/by-sa/3.0/de/deed.en_US">CC-BY-SA</a>
           </p>
         </div>
       </div>
