Call for proposals has not yet started

--- a/views/index.erb
+++ b/views/index.erb
@@ -50,7 +50,7 @@
       </div>
       <div class="sub-heading">
         <p>
-        Noch läuft der <a href="#call-for-proposals">Call for Proposals</a>. Sobald es Details zum Programm gibt, werden wir diese hier
+        Sobald es Details zum Programm gibt, werden wir diese hier
         veröffentlichen. Folge uns auf <a href="https://twitter.com/RedFrogConf">Twitter</a>, um Neuigkeiten direkt zu erfahren.
         </p>
       </div>
@@ -82,13 +82,7 @@
         </p>
 
         <p>
-        Unser Call for Proposals ist nun offiziell eröffnet und läuft bis zum <strong>15. Juli</strong>. Gib uns danach eine
-        Woche Zeit und wir werden dich darüber informieren, ob dein Proposal angenommen wurde oder nicht.
-        Unsere Slots sind jeweils eine Stunde – aber wir sind bei der Planung flexibel: Schreib uns einfach!
-         </p>
-
-        <p>
-        Bitte sende uns dein Proposal an <a href="mailto:ruby@froscon.org">ruby@froscon.org</a> &ndash; fühle dich frei dein Proposal so zu gestalten, wie du möchtest.
+        Noch ist unser Call for Proposals nicht eröffnet. Das kommt aber bald!
         </p>
       </div>
     </div>
