Refactor to new URL format

--- a/views/2013.erb
+++ b/views/2013.erb
@@ -39,7 +39,7 @@
     <div class="span5">
       <div class="box aligncenter">
         <div class="halftop">
-          <h4><a href="/talks/weck-den-geek-in-dir"><strong>Weck den Geek in dir</strong></a></h4>
+          <h4><a href="talks/weck-den-geek-in-dir"><strong>Weck den Geek in dir</strong></a></h4>
         </div>
         <p>
           mit <em>Bodo Tasche</em> (Achtung, andere Startzeit: 10:30 - 11:00)
@@ -49,7 +49,7 @@
     <div class="span5">
       <div class="box aligncenter">
         <div class="halftop">
-          <h4><a href="/talks/ruby-is-magic"><strong>Ruby is Magic</strong></a></h4>
+          <h4><a href="talks/ruby-is-magic"><strong>Ruby is Magic</strong></a></h4>
         </div>
         <p>
           mit <em>Dirk Breuer und Sebastian Cohnen</em>
@@ -70,7 +70,7 @@
     <div class="span5">
       <div class="box aligncenter">
         <div class="halftop">
-          <h4><a href="/talks/can-we-write-perfect-tests-maybe"><strong>Can we write perfect tests? - Maybe!</strong></a></h4>
+          <h4><a href="talks/can-we-write-perfect-tests-maybe"><strong>Can we write perfect tests? - Maybe!</strong></a></h4>
         </div>
         <p>
           mit <em>Markus Schirp</em>
@@ -78,7 +78,7 @@
       </div>
       <div class="box aligncenter">
         <div class="halftop">
-          <h4><a href="/talks/sample-architecture-of-a-rails-b2b-plattform"><strong>Sample architecture of a Rails B2B-plattform</strong></a></h4>
+          <h4><a href="talks/sample-architecture-of-a-rails-b2b-plattform"><strong>Sample architecture of a Rails B2B-plattform</strong></a></h4>
         </div>
         <p>
           mit <em>Benedikt Voigt</em>
@@ -88,7 +88,7 @@
     <div class="span5">
       <div class="box aligncenter">
         <div class="halftop">
-          <h4><a href="/talks/concurrency-matters"><strong>Concurrency Matters</strong></a></h4>
+          <h4><a href="talks/concurrency-matters"><strong>Concurrency Matters</strong></a></h4>
         </div>
         <p>mit <em>Mateus Armando</em></p>
       </div>
@@ -123,7 +123,7 @@
     <div class="span5">
       <div class="box aligncenter">
         <div class="halftop">
-          <h4><a href="/talks/agil-von-kopf-bis-fuss"><strong>Agil von Kopf bis Fuß</strong></a></h4>
+          <h4><a href="talks/agil-von-kopf-bis-fuss"><strong>Agil von Kopf bis Fuß</strong></a></h4>
         </div>
         <p>mit <em>Daniel Lehmann</em></p>
       </div>
@@ -131,7 +131,7 @@
     <div class="span5">
       <div class="box aligncenter">
         <div class="halftop">
-          <h4><a href="/talks/testbarkeit-in-ruby"><strong>Testbarkeit in Ruby </strong></a></h4>
+          <h4><a href="talks/testbarkeit-in-ruby"><strong>Testbarkeit in Ruby </strong></a></h4>
         </div>
         <p>mit <em>Eduard Litau</em></p>
       </div>
@@ -150,7 +150,7 @@
     <div class="span5">
       <div class="box aligncenter">
         <div class="halftop">
-          <h4><a href="/talks/deployment-ohne-ziepen"><strong>Deployment ohne Ziepen</strong></a></h4>
+          <h4><a href="talks/deployment-ohne-ziepen"><strong>Deployment ohne Ziepen</strong></a></h4>
         </div>
         <p>mit <em>Sebastian Schulze</em></p>
       </div>
@@ -158,7 +158,7 @@
     <div class="span5">
       <div class="box aligncenter">
         <div class="halftop">
-          <h4><a href="/talks/oo-ohne-vererbung"><strong>OO ohne Vererbung</strong></a></h4>
+          <h4><a href="talks/oo-ohne-vererbung"><strong>OO ohne Vererbung</strong></a></h4>
         </div>
         <p>mit <em>Lucas Dohmen</em></p>
       </div>
@@ -177,7 +177,7 @@
     <div class="span5">
       <div class="box aligncenter">
         <div class="halftop">
-          <h4><a href="/talks/building-awesome-ruby-command-line-apps"><strong>Building Awesome Ruby Command Line Apps</strong></a></h4>
+          <h4><a href="talks/building-awesome-ruby-command-line-apps"><strong>Building Awesome Ruby Command Line Apps</strong></a></h4>
         </div>
         <p>mit <em>Christian Vervoorts</em></p>
       </div>
@@ -185,7 +185,7 @@
     <div class="span5">
       <div class="box aligncenter">
         <div class="halftop">
-          <h4><a href="/talks/the-fancy-programming-language"><strong>The Fancy Programming Language</strong></a></h4>
+          <h4><a href="talks/the-fancy-programming-language"><strong>The Fancy Programming Language</strong></a></h4>
         </div>
         <p>mit <em>Christopher Bertels</em></p>
       </div>
@@ -204,7 +204,7 @@
     <div class="span5">
       <div class="box aligncenter">
         <div class="halftop">
-          <h4><a href="/talks/true-false-cats-dogs-designer-entwickler"><strong>True &amp; False. Cats &amp; Dogs. Designer &amp; Entwickler?</strong></a></h4>
+          <h4><a href="talks/true-false-cats-dogs-designer-entwickler"><strong>True &amp; False. Cats &amp; Dogs. Designer &amp; Entwickler?</strong></a></h4>
         </div>
         <p>mit <em>Liane Thönnes und Tim Schneider</em></p>
       </div>
