--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
 <section id="intro">
 <div class="slogan">
   <div class="icon">
-    <img src="/img/ruby_froscon_logo-big.png" width="477">
+    <img src="img/ruby_froscon_logo-big.png" width="477">
   </div>
   <h1><span class="ruby">Red</span><span class="froscon">Frog</span> Conf 2014</h1>
   <h2>Ruby meets FrOSCon - auch auf der FrOSCon 9</h2>
@@ -153,7 +153,7 @@
       <div class="sub-heading">
         <p>
         Das letzte Jahr hat uns die RedFrogConf viel Spaß gemacht. Informationen zum Programm des Vorjahres findet ihr hier:
-        <a href="/history/2013">RedFrogConf 2013</a>
+        <a href="2013.html">RedFrogConf 2013</a>
         </p>
         <p>
         Wir hoffen auch dieses Jahr auf viel Spaß und neue Erfahrungen. Kommt vorbei und macht mit!
