--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,12 +12,12 @@
 <meta http-equiv="expires" content="-1" />
 <meta http-equiv="pragma" content="no-cache" />
 <!-- styles -->
-<link href="/css/reset.css" rel="stylesheet" />
-<link href="/css/bootstrap.css" rel="stylesheet" />
-<link href="/css/bootstrap-responsive.css" rel="stylesheet" />
-<link href="/css/style.css" rel="stylesheet" />
-<link href="/color/default.css" rel="stylesheet" />
-<link href="/css/custom.css" rel="stylesheet" />
+<link href="css/reset.css" rel="stylesheet" />
+<link href="css/bootstrap.css" rel="stylesheet" />
+<link href="css/bootstrap-responsive.css" rel="stylesheet" />
+<link href="css/style.css" rel="stylesheet" />
+<link href="color/default.css" rel="stylesheet" />
+<link href="css/custom.css" rel="stylesheet" />
 <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -38,7 +38,7 @@
   <div class="navbar-inner">
     <div class="container">
       <div class="title">
-        <a href="/">
+        <a href="index.html">
           RedFrog Conf 2014
         </a>
       </div>
@@ -72,8 +72,8 @@
       <div class="span12">
         <div class="aligncenter">
           <div class="logo">
-            <a class="brand" href="/">
-              <img src="/img/ruby_froscon_logo-small.png" width="159" />
+            <a class="brand" href="index.html">
+              <img src="img/ruby_froscon_logo-small.png" width="159" />
             </a>
           </div>
           <p>
@@ -90,14 +90,14 @@
 
 <!-- javascript -->
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-<script src="/js/jquery.min.js"></script>
-<script src="/js/jquery.easing.js"></script>
-<script src="/js/bootstrap.js"></script>
-<script src="/js/parallax/jquery.parallax-1.1.3.js"></script>
-<script src="/js/nagging-menu.js"></script>
-<script src="/js/jquery.nav.js"></script>
-<script src="/js/hover/jquery-hover-effect.js"></script>
-<script src="/js/jquery.scrollTo.js"></script>
-<script src="/js/custom.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/jquery.easing.js"></script>
+<script src="js/bootstrap.js"></script>
+<script src="js/parallax/jquery.parallax-1.1.3.js"></script>
+<script src="js/nagging-menu.js"></script>
+<script src="js/jquery.nav.js"></script>
+<script src="js/hover/jquery-hover-effect.js"></script>
+<script src="js/jquery.scrollTo.js"></script>
+<script src="js/custom.js"></script>
 </body>
 </html>
