updated froson links

--- a/views/index.erb
+++ b/views/index.erb
@@ -30,7 +30,7 @@
         Ob Rails oder Ruby Motion, ob JRuby oder Rubinius, Entwicklung oder Operations, Design Patterns oder Entwicklerkultur –
         wir machen keine weiteren Vorgaben. Die Vorträge werden bevorzugt auf Deutsch gehalten, aber wir sind auch offen für
         Vorträge auf Englisch. Da wir einen Workshop-Raum auf der FrOSCon zur Verfügung haben, brauchst du nur
-        <a href="http://www.froscon.de/en/visitors/visitors">Eintritt bei der Froscon zu zahlen</a>
+        <a href="http://www.froscon.de/info/">Eintritt bei der Froscon zu zahlen</a>
         – wir verlangen keinen zusätzlichen Eintritt. Und natürlich kannst du auch an allen Angeboten und Vorträgen der FrOSCon teilnehmen.
         </p>
       </div>
@@ -112,7 +112,7 @@
       <div class="sub-heading">
         <p>
           Die RedFrog Conf 2014 findet im Rahmen der FrOSCon 9 am <strong>23. und 24. August 2014</strong> an der <strong>Hochschule Bonn-Rhein-Sieg in Sankt Augustin</strong>
-          statt. Für nähere Infos möchten wir euch gerne auf die <a href="http://www.froscon.de/besucher/besucher/">offizielle FrOSCon Seite</a> verweisen.
+          statt. Für nähere Infos möchten wir euch gerne auf die <a href="http://www.froscon.de/">offizielle FrOSCon Seite</a> verweisen.
         </p>
       </div>
     </div>
