--- a/css/custom.css
+++ b/css/custom.css
@@ -25,6 +25,17 @@
   text-align: center;
 }
 
+.workshop {
+  height: 1880px;
+  position: absolute;
+  width: 29%;
+}
+
+.workshop-invisible {
+  height: 305px;
+  visibility: hidden;
+}
+
 #programm .heading h3 {
   color: #3a3a3a;
   text-shadow: none;
